--- a/ConcertSimulation/.classpath
+++ b/ConcertSimulation/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="con" path="REPAST_SIMPHONY_SUPPORT"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/bulletphysics"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JBullet"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
