--- a/Motioncapture/AndroidManifest.xml
+++ b/Motioncapture/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="16" />
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <uses-permission
+        android:required="true"
+        android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="OSCSenderService"/>
     </application>
 
 </manifest>
