--- a/MobileMotionCollector/pom.xml
+++ b/MobileMotionCollector/pom.xml
@@ -34,5 +34,10 @@
   	<artifactId>log4j</artifactId>
   	<version>1.2.17</version>
   </dependency>
+  <dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-math3</artifactId>
+	<version>3.0</version>
+</dependency>
   </dependencies>
 </project>
